mypkg/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Expected_Salary__c</fullName>
        <label>Expected Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Designation__c</fullName>
        <label>Job Designation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JOB-{000}</displayFormat>
        <label>Job Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>